[gd_scene load_steps=24 format=2]

[ext_resource path="res://Pics/boss1_anime/Sprite-0015.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Boss1/boss1.gd" type="Script" id=2]
[ext_resource path="res://Pics/boss1_anime/Sprite-0010.png" type="Texture" id=3]
[ext_resource path="res://Pics/boss1_anime/Sprite-0018.png" type="Texture" id=4]
[ext_resource path="res://Pics/boss1_anime/Sprite-0014.png" type="Texture" id=5]
[ext_resource path="res://Pics/boss1_anime/Sprite-0013.png" type="Texture" id=6]
[ext_resource path="res://Pics/boss1_anime/Sprite-0016.png" type="Texture" id=7]
[ext_resource path="res://Pics/boss1_anime/Sprite-0017.png" type="Texture" id=8]
[ext_resource path="res://Pics/boss1_anime/Sprite-0012.png" type="Texture" id=9]
[ext_resource path="res://Pics/boss1_anime/Sprite-0011.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Enemystats.tscn" type="PackedScene" id=11]
[ext_resource path="res://Atta_Detect/ObjectDetectionZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://Pics/boss1_anime/Sprite-0021.png" type="Texture" id=13]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemy/EnemyHealthBar.tscn" type="PackedScene" id=15]
[ext_resource path="res://Pics/boss1_anime/Sprite-0022.png" type="Texture" id=16]
[ext_resource path="res://Pics/boss1_anime/Sprite-0020.png" type="Texture" id=17]
[ext_resource path="res://Pics/boss1_anime/Sprite-0019.png" type="Texture" id=18]
[ext_resource path="res://Enemy/Boss1/boss1_shield.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": false,
"name": "all",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 17.4861

[sub_resource type="CircleShape2D" id=4]
radius = 64.0

[node name="boss1" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="rage_effect" type="Node2D" parent="."]

[node name="boss1_shield" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( -28, -36 )

[node name="boss1_shield2" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( 52, 36 )

[node name="boss1_shield3" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( -28, 24 )

[node name="boss1_shield4" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( 20, -20 )

[node name="boss1_shield5" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( 44, -8 )

[node name="boss1_shield6" parent="rage_effect" instance=ExtResource( 19 )]
position = Vector2( -64, -8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3.02667, -29.0246 )
frames = SubResource( 1 )
animation = "all"

[node name="Enemystats" parent="." instance=ExtResource( 11 )]
health = 35.0
damage = 30.0
speed = 60.0

[node name="EnemyHealthBar" parent="." instance=ExtResource( 15 )]
margin_top = -64.0
margin_bottom = -24.0

[node name="ColorRect" parent="EnemyHealthBar" index="0"]
color = Color( 1, 0, 0, 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 14 )]
visible = false
collision_layer = 8
collision_mask = 0
is_enemy = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="rage_state" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ObjectDetectionZone" parent="." instance=ExtResource( 12 )]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="ObjectDetectionZone" index="0"]
shape = SubResource( 4 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="rage_state" to="." method="_on_rage_state_timeout"]
[connection signal="body_entered" from="ObjectDetectionZone" to="." method="_on_ObjectDetectionZone_body_entered"]
[connection signal="body_exited" from="ObjectDetectionZone" to="." method="_on_ObjectDetectionZone_body_exited"]

[editable path="EnemyHealthBar"]

[editable path="Hurtbox"]

[editable path="ObjectDetectionZone"]
